--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
 # Logs
 logs
 *.log
@@ -102,3 +107,9 @@ dist
 
 # TernJS port file
 .tern-port
+
+# VSCode
+.vscode/
+
+# History plugin
+.history/
